@@ -65,6 +65,27 @@ all the debug messages related to event publishing. When starting the Beat,
 selectors can be overwritten using the `-d` command line option (`-d` also sets
 the debug log level).
 
+===== metrics.enabled
+
+If enabled, {beatname_uc} periodically logs its internal metrics that have
+changed in the last period. For each metric that changed, the delta from the
+value at the beginning of the period is logged. The default is true.
+
+Here is an example log line:
+
+[source,shell]
+----------------------------------------------------------------------------------------------------------------------------------------------------
+2016/07/04 12:16:10.821047 logp.go:194: INFO Non-zero metrics in the last 30s:  libbeatEsPublishedAndAckedEvents=18 libbeatEsPublishWriteBytes=10045
+----------------------------------------------------------------------------------------------------------------------------------------------------
+
+Note that we currently offer no backwards compatible guarantees for the internal
+metrics and for this reason they are also not documented.
+
+
+===== metrics.period
+
+The period after which to log the internal metrics. The default is 30s.
+
 ===== files.path
 
 The directory that log files are written to. The default is the logs path. See the
